...
        return;
      }
      const start = new Date();
      start.setHours(start.getHours() + 1);
      const end = new Date(start.getTime() + 60 * 60 * 1000);
      const id = await Calendar.createEventAsync(writable.id, {
        title: 'Midnight Howl Live in Brooklyn',
        startDate: start,
        endDate: end,
        location: 'Warsaw, Brooklyn, NY',
        notes: 'FrontRow event',
      });
      setLastEventId(id);
...
